[gd_scene load_steps=6 format=3 uid="uid://dst3aqch0sv53"]

[ext_resource type="Script" path="res://root.gd" id="1_2ngg2"]
[ext_resource type="Texture2D" uid="uid://dsaa1ydyathf6" path="res://PlayArea.png" id="1_jeh06"]
[ext_resource type="Texture2D" uid="uid://dgf4eccjxcwk4" path="res://One.png" id="1_wooqc"]
[ext_resource type="Script" path="res://oneButton.gd" id="2_pojv2"]
[ext_resource type="PackedScene" uid="uid://chwxpdbj8xa22" path="res://conectable.tscn" id="4_nji78"]

[node name="Root" type="Node"]
script = ExtResource("1_2ngg2")

[node name="PlayArea" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 376)
texture = ExtResource("1_jeh06")

[node name="UI" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 8

[node name="Menu" type="Panel" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="UI/VBoxContainer/Menu/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_wooqc")
script = ExtResource("2_pojv2")
conectable = ExtResource("4_nji78")

[connection signal="button_down" from="UI/VBoxContainer/Menu/MarginContainer/HBoxContainer/TextureButton" to="UI/VBoxContainer/Menu/MarginContainer/HBoxContainer/TextureButton" method="_on_button_down"]
[connection signal="button_up" from="UI/VBoxContainer/Menu/MarginContainer/HBoxContainer/TextureButton" to="UI/VBoxContainer/Menu/MarginContainer/HBoxContainer/TextureButton" method="_on_button_up"]
